tests/snapshots/compare__compare@default.snap
---
source: tests/compare.rs
info: default
---
Difference on `[[&x]]: [&mut [&T]]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[[&x]]: &mut [[&T]]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&[x]]: &mut [&[T]]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&x]: &mut [&T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&x]: &mut [&[T]]`:
  type-based returned: Success([T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&&x]: &mut [&&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&x]: &mut [&mut T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&x]: &mut [&mut [T]]`:
  type-based returned: Success([T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&&x]: &mut [&mut &T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&x]: &mut &mut [&T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&x]: &mut &mut [&mut T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &mut [&mut T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &mut [&mut [T]]`:
  type-based returned: Success([T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &mut [&mut &T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&&mut x]: &mut &mut [&mut T]`:
  type-based returned: Success(T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&x]: &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&x]: &mut [&[T]]`:
  type-based returned: Success(&[T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&x]: &mut [&&T]`:
  type-based returned: Success(&&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&x]: &mut [&&mut T]`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&x]: &mut &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&(mut x)]: &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&(mut x)]: &mut [&[T]]`:
  type-based returned: Success(&[T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&(mut x)]: &mut [&&T]`:
  type-based returned: Success(&&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&(mut x)]: &mut [&&mut T]`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&(mut x)]: &mut &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut [&T]`:
  type-based returned: Success(&&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut [&[T]]`:
  type-based returned: Success(&&[T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut [&&T]`:
  type-based returned: Success(&&&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut [&&mut T]`:
  type-based returned: Success(&&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut [&mut T]`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut [&mut [T]]`:
  type-based returned: Success(&&mut [T])
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut [&mut &T]`:
  type-based returned: Success(&&mut &T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut [&mut &mut T]`:
  type-based returned: Success(&&mut &mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut &mut [&T]`:
  type-based returned: Success(&&T)
    bm-based returned: TypeError("mismatched types")
Difference on `[&ref x]: &mut &mut [&mut T]`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("mismatched types")
Difference on `&[&x]: &&mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `&[&x]: &mut &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `&mut [&x]: &mut &mut [&T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
