tests/snapshots/compare__compare@ergo2024-ergo2024.snap
---
source: tests/compare.rs
info:
  - ergo2024
  - ergo2024
---
Difference on `[&x]: [&mut &mut T]`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("cannot borrow as mutable")
Difference on `[&mut x]: [&mut &mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `[&mut x]: &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `&&x: &&mut &mut T`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("cannot borrow as mutable")
Difference on `&&x: &mut &&mut T`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("cannot borrow as mutable")
Difference on `&&x: &mut &mut &mut T`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("cannot borrow as mutable")
Difference on `&&mut x: &mut &&mut T`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("mismatched types")
Difference on `&&mut x: &mut &mut T`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(T)
Difference on `&&mut x: &mut &mut [T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success([T])
Difference on `&&mut x: &mut &mut &T`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `&&mut x: &mut &mut &mut T`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("cannot borrow as mutable")
Difference on `&x: &[&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&x: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&x: &mut &mut T`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("cannot borrow as mutable")
Difference on `&x: &mut &mut [T]`:
  type-based returned: Success(&[T])
    bm-based returned: TypeError("cannot borrow as mutable")
Difference on `&x: &mut &mut &T`:
  type-based returned: Success(&&T)
    bm-based returned: TypeError("cannot borrow as mutable")
Difference on `&x: &mut &mut &mut T`:
  type-based returned: Success(&&mut T)
    bm-based returned: TypeError("cannot borrow as mutable")
Difference on `&(mut x): &[&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&(mut x): &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&(mut x): &mut &T`:
  type-based returned: TypeError("MutOnRef")
    bm-based returned: Success(&T)
Difference on `&(mut x): &mut &[T]`:
  type-based returned: TypeError("MutOnRef")
    bm-based returned: Success(&[T])
Difference on `&(mut x): &mut &&T`:
  type-based returned: TypeError("MutOnRef")
    bm-based returned: Success(&&T)
Difference on `&(mut x): &mut &&mut T`:
  type-based returned: TypeError("MutOnRef")
    bm-based returned: Success(&&mut T)
Difference on `&ref x: &mut &T`:
  type-based returned: Success(&T)
    bm-based returned: Success(&&T)
Difference on `&ref x: &mut &[T]`:
  type-based returned: Success(&[T])
    bm-based returned: Success(&&[T])
Difference on `&ref x: &mut &&T`:
  type-based returned: Success(&&T)
    bm-based returned: Success(&&&T)
Difference on `&ref x: &mut &&mut T`:
  type-based returned: Success(&&mut T)
    bm-based returned: Success(&&&mut T)
Difference on `&ref x: &mut &mut T`:
  type-based returned: Success(&T)
    bm-based returned: Success(&&mut T)
Difference on `&ref x: &mut &mut [T]`:
  type-based returned: Success(&[T])
    bm-based returned: Success(&&mut [T])
Difference on `&ref x: &mut &mut &T`:
  type-based returned: Success(&&T)
    bm-based returned: Success(&&mut &T)
Difference on `&ref x: &mut &mut &mut T`:
  type-based returned: Success(&&mut T)
    bm-based returned: Success(&&mut &mut T)
Difference on `&mut [x]: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `&mut &x: &mut &mut &mut T`:
  type-based returned: Success(&T)
    bm-based returned: TypeError("cannot borrow as mutable")
Difference on `&mut &mut x: &mut &mut &mut T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `&mut x: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&mut x: &mut &mut T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `&mut x: &mut &mut [T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut [T])
Difference on `&mut x: &mut &mut &T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut &T)
Difference on `&mut x: &mut &mut &mut T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut &mut T)
Difference on `&mut mut x: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&mut mut x: &mut &mut T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `&mut mut x: &mut &mut [T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut [T])
Difference on `&mut mut x: &mut &mut &T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut &T)
Difference on `&mut mut x: &mut &mut &mut T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut &mut T)
