tests/snapshots/compare__compare@ergo2024.snap
---
source: tests/compare.rs
info: ergo2024
---
Difference on `&x: &[&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&x: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&(mut x): &[&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&(mut x): &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&mut x: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&mut mut x: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
