tests/snapshots/compare__compare@rfc3627_2021.snap
---
source: tests/compare.rs
info: rfc3627_2021
---
Difference on `[[&mut x]]: [&mut [&T]]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `[[&mut x]]: &mut [[&T]]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `[[mut x]]: [&mut [&mut T]]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `[[mut x]]: &mut [[&mut T]]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `[&mut [x]]: &mut [&[T]]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `[&mut &x]: &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(T)
Difference on `[&mut &x]: &mut [&[T]]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success([T])
Difference on `[&mut &x]: &mut [&&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `[&mut &x]: &mut &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(T)
Difference on `[&mut x]: &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `[&mut x]: &mut [&[T]]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&[T])
Difference on `[&mut x]: &mut [&&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&&T)
Difference on `[&mut x]: &mut [&&mut T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&&mut T)
Difference on `[&mut x]: &mut &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `[&mut mut x]: &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `[&mut mut x]: &mut [&[T]]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&[T])
Difference on `[&mut mut x]: &mut [&&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&&T)
Difference on `[&mut mut x]: &mut [&&mut T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&&mut T)
Difference on `[&mut mut x]: &mut &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `[&mut ref x]: &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&&T)
Difference on `[&mut ref x]: &mut [&[T]]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&&[T])
Difference on `[&mut ref x]: &mut [&&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&&&T)
Difference on `[&mut ref x]: &mut [&&mut T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&&&mut T)
Difference on `[&mut ref x]: &mut &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&&T)
Difference on `[&mut ref mut x]: &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&mut &T)
Difference on `[&mut ref mut x]: &mut [&[T]]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&mut &[T])
Difference on `[&mut ref mut x]: &mut [&&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&mut &&T)
Difference on `[&mut ref mut x]: &mut [&&mut T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&mut &&mut T)
Difference on `[&mut ref mut x]: &mut &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&mut &T)
Difference on `[mut x]: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `[mut x]: &mut [&mut [T]]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut [T])
Difference on `[mut x]: &mut [&mut &T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut &T)
Difference on `[mut x]: &mut [&mut &mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut &mut T)
Difference on `[mut x]: &mut &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `&mut [&mut x]: &mut &mut [&T]`:
  type-based returned: TypeError("MutabilityMismatch")
    bm-based returned: Success(&T)
Difference on `&mut [mut x]: &mut &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
