tests/snapshots/compare__compare@waffle.snap
---
source: tests/compare.rs
info: waffle
---
Difference on `[&mut x]: [&mut &mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `[&mut x]: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `&x: &[&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&(mut x): &[&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&mut [x]: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `&mut &mut x: &mut &mut &mut T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `&mut x: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&mut x: &mut &mut T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `&mut x: &mut &mut [T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut [T])
Difference on `&mut x: &mut &mut &T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut &T)
Difference on `&mut x: &mut &mut &mut T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut &mut T)
Difference on `&mut mut x: &mut [&mut T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success([&mut T])
Difference on `&mut mut x: &mut &mut T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut T)
Difference on `&mut mut x: &mut &mut [T]`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut [T])
Difference on `&mut mut x: &mut &mut &T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut &T)
Difference on `&mut mut x: &mut &mut &mut T`:
  type-based returned: TypeError("CantCopyRefMut")
    bm-based returned: Success(&mut &mut T)
